📦 更新项目配置和任务规划
✅ 主要更新内容:
1. CLAUDE.md添加Git仓库管理配置信息
2. 新增TaskArchitect项目管理计划文档
3. TempWeatherController天气控制器优化

🎯 Git仓库信息:
- 仓库地址: https://gitee.com/hxcisunli/hxci-campus-portal-system.git
- 支持强制推送模式进行代码同步

📋 项目管理:
- 完成任务颗粒级分解和工期估算
- 整合5个新增任务到现有体系
- 制定专业的3阶段执行计划

🚀 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>